--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="jp">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>webhook....</title>
+</head>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <h1>webhook (notwebhook)</h1>
+    </header>
+    <main>
+        <section class="about">
+            <h2>Hello I'm webhook! I'm a programmer and musician who does not know what he's doing!</h2>
+            <p>I like gaming, tech, music, stocks, and other crazy stuff!</p>
+        </section>
+        <section class="links">
+            <h2>Contact me here!</h2>
+            <ul>
+                <li><a href="https://t.me/notwebhook" target="_blank">Telegram</a></li>
+                <li><a href="https://twitter.com/NotWebhook" target="_blank">Twitter</a></li>
+                <li><a href="https://github.com/NotWebhook" target="_blank">GitHub</a></li>
+                <li><a href="mailto:webhook@webhook.dbot.cc" target="_blank">Mail</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 webhook (not him)</p>
+    </footer>
 </body>
-
 </html>
